schema/testdata/errors/relationships_one_to_one_relation_field_not_valid_type.keel
model User {
    fields {
        student Student {
            @unique
            //expect-error:23:32:RelationshipError:The field 'createdAt' on Student must be of type User in order to establish a relationship
            @relation(createdAt)
        }
        student2 Student {
            @unique
            @relation(user2)
        }
    }
}

model Student {
    fields {
        user User
        user2 User
    }
}
